--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,14 @@
  *= require_tree . 
 */
 body {margin:0; padding:0;}
+.field_with_errors {display: inline;}
 .notice {text-align: center; font-weight: bold;}
 .header_bar {height: 35px; float: right; background-color: #3399ff; width: 100%;}
-.page_title {font-family: courier; font-weight: bold; font-style: italic; font-size: 30px; text-align: center;}
+.header_bar_internals {font-family: verdana, arial; text-align: right; font-size: small;width: 50%;}
+.header_bar_left {font-family: verdana, arial; text-align: left; font-size: small;width: 50%;}
+.page_title {font-family: courier; font-weight: bold; font-style: italic; font-size: 30px; text-align: center; 
+vertical-align:middle; position:relative; left:-2%; z-index: -1;}
+table.center {position: realtive +90; margin-left: auto;  margin-right: auto;}
+.middle_obj{text-align:center; position:relative;}
+.shout_display{position:relative; left: 33%;}
+.shouting_user{font-weight: bold; font-style:italic; font-color: #3377FF;}
