--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,14 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 <div align="center">
 <%= form_for(@user) do |form| %>
 <div>
   <b>Please enter your <%= form.label :email %> to sign up.</b><br/>
+  <% if @user.errors.any? %>
+<% @user.errors.full_messages.each do |message| %>
+<p><%=message %></p>
+<% end 
+end %>
+
   <%= form.text_field :email %>
 </div>
 <%= form.submit "Sign Me Up!" %>
